# ParticlePlayground

./: .default_settings.toml  .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  ParticlePlayground.spec  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_release.yml
assets/: LICENSE
docs/: LICENSE.md
src/: __init__.py  game.py  hot_reload.py  input_handler.py  logger.py  menu.py  palette.py  storage.py
src/menu/: main.py  settings.py
src/utils/: icon.py
